##
## $Id: Makefile.am 8702 2010-08-18 10:23:50Z mcoutinho $
##

noinst_HEADERS = 
noinst_HEADERS += shared/include/cache.h shared/include/sharedCPUs.h 

noinst_HEADERS += shared/src/cache_manager.c

SUBDIRS = @libcpu_cpu_subdir@
DIST_SUBDIRS = @libcpu_cpu_subdir@

include $(top_srcdir)/automake/subdirs.am
include $(top_srcdir)/automake/local.am
